bug fix: word count devider on mobile device

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -138,3 +138,4 @@ article
 
     &:before
       content: "|"
+      margin: 0 2px
